--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "bajaj_hackathon",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Bajaj Hackathon REST API",
+  "main": "source/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node source/server.js"
+    "start": "node source/server.js",
+    "build": "echo 'Build complete'",
+    "dev": "node source/server.js"
   },
-  "keywords": [],
+  "keywords": ["api", "rest", "bajaj", "hackathon"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
